--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div id="error">
-    <h1 class="red">File not found</h1>
+<div class="text">
+    <h1>File not found</h1>
     <a href="{{url_for('index')}}">Home</a>
 </div>
 {% endblock %}
