--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div id="error">
-    <h1 class="red">An unexpected error has occurred</h1>
+<div class="text">
+    <h1>An unexpected error has occurred</h1>
     <a href="{{url_for('index')}}">Home</a>
 </div>
 {% endblock %}
