--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="text">
+<div class="text" id="error">
     <h1>An unexpected error has occurred</h1>
     <a href="{{url_for('index')}}">Home</a>
 </div>
